# ShamirsSchemeSimpleImplemetation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
function/: ILog.h  JoiningWindow.cpp  JoiningWindow.h  MainProgram.cpp  MainProgram.h  SchemeJoiner.cpp  SchemeJoiner.h  SchemeParter.cpp  SchemeParter.h  functions.h
